--- a/1.ipynb
+++ b/1.ipynb
@@ -23,7 +23,7 @@
     "try:\n",
     "    data = pd.read_csv(file_path)\n",
     "except FileNotFoundError:\n",
-    "    print(f\"Ошибка: Файл '{file_path}' не найден. Проверьте путь и повторите попытку.\")\n",
+    "    print(f\"Ошибка: Файл '{file_path}' не найден\")\n",
     "    exit()\n",
     "\n",
     "df=data.copy()\n",
@@ -54,7 +54,7 @@
     "Доля покупателей с подпиской, использующих тип доставки \"Express\": 18.04%\n",
     "Доля покупателей без подписки, использующих тип доставки \"Express\": 16.02%\n",
     "Вывод:\n",
-    "Покупатели с подпиской действительно чуть чаще выбирают \"Express\" как тип доставки по сравнению с покупателями без подписки. Однако разница между этими группами составляет примерно 2%, что может быть статистически незначимой. Для более точных выводов рекомендуется провести тест на статистическую значимость (например, с помощью теста пропорций)."
+    "Покупатели с подпиской действительно чуть чаще выбирают \"Express\" как тип доставки по сравнению с покупателями без подписки. Однако разница между этими группами составляет примерно 2%, что может быть статистически незначимой."
    ],
    "id": "17e11aeb93086c56"
   },
@@ -88,7 +88,7 @@
    "source": [
     "\n",
     "На основании вычисленного коэффициента корреляции 0.0081 можно сделать следующий вывод:\n",
-    "Связь между количеством предыдущих покупок и суммой текущей покупки практически отсутствует, так как значение корреляции близко к нулю. Это означает, что количество предыдущих покупок не является значимым предиктором суммы текущей покупки."
+    "Связь между количеством предыдущих покупок и суммой текущей покупки практически отсутствует, так как значение корреляции близко к нулю."
    ],
    "id": "eadac983c6809cb8"
   },
@@ -101,9 +101,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Покупатели с высоким рейтингом\n",
     "high_rated = df[df['Review Rating'] >= 4]\n",
-    "# Покупки с применением скидки\n",
     "discounted_high_rated = high_rated[high_rated['Discount Applied'] == 'Yes']\n",
     "print(len(discounted_high_rated) / len(high_rated))\n"
    ],
@@ -446,7 +444,6 @@
     "    exit()\n",
     "\n",
     "df=data.copy()\n",
-    "# Поиск стран с максимальным потреблением\n",
     "max_beer = df.loc[df['beer_servings'].idxmax()]\n",
     "max_spirit = df.loc[df['spirit_servings'].idxmax()]\n",
     "max_wine = df.loc[df['wine_servings'].idxmax()]\n",
